<resources>
    <string name="app_name">Selesai</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_count">Count</string>
    <string name="button_label_min">Min</string>
    <string name="button_label_reset">Reset</string>
    <string name="count_initial_value">0</string>
    <string name="pesanToast">Toast</string>
    <string name="pesanReset">Reset</string>
    <string name="pesanMin"> nilai 0</string>
</resources>